@@ -1,5 +1,5 @@
-/* Copyright (C) 2005-2014 Free Software Foundation, Inc.
-
+/* ARCH_FORK definition for Linux fork implementation.  MicroBlaze version.
+   Copyright (C) 2014 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -25,5 +25,3 @@
   INLINE_SYSCALL (clone, 5,                                                   \
                   CLONE_CHILD_SETTID | CLONE_CHILD_CLEARTID | SIGCHLD, 0,     \
                   NULL, NULL, &THREAD_SELF->tid)
-
-#include <nptl/sysdeps/unix/sysv/linux/fork.c>
